div elements replaced by semantic elements in header; span class changed to more descriptive class; style.css updated; website appearance not affected.

--- a/challenge/starter/index.html
+++ b/challenge/starter/index.html
@@ -7,10 +7,13 @@
     <title>Horiseon - Search Engine Optimization Services</title>
 </head>
 
+
 <body>
-    <div class="header">
-        <p>Hori<span class="seo">seo</span>n</p>
-        <div>
+
+
+    <header>
+        <p>Hori<span class="logo">seo</span>n</p>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,8 +25,10 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
+    
+    
     <div class="hero">
         <!-- <img src="./assets/images/digital-marketing-meeting.jpg" alt="people in a meeting room working together" class="hero" /> -->
     </div>
