--- a/challenge/starter/index.html
+++ b/challenge/starter/index.html
@@ -61,32 +61,32 @@
 
     </section>
 
-    <aside class="benefits">
+    <aside>
 
-        <article class="benefit-lead">
+        <section class="benefits">
             <h1>Lead Generation</h1>
             <img src="./assets/images/lead-generation.png" alt="a symbol of a gear going through a funnel and coming out the other end as a dollar sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </article>
+        </section>
 
-        <article class="benefit-brand">
+        <section class="benefits">
             <h1>Brand Awareness</h1>
             <img src="./assets/images/brand-awareness.png" alt="a symbol of a parson with a tie with a lightbulb radiating light as a head." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </article>
+        </section>
 
-        <article class="benefit-cost">
+        <section class="benefits">
             <h1>Cost Management</h1>
             <img src="./assets/images/cost-management.png" alt="a symbol of a gear in the background with three dollar signs in circles in front of it."></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </article>
-        
+        </section>
+
     </aside>
 
 
