--- a/challenge/starter/index.html
+++ b/challenge/starter/index.html
@@ -90,12 +90,12 @@
     </aside>
 
 
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <footer>
+        <p class="headline">Made with ❤️️ by Horiseon</p>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
