--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./challenge/starter/assets/css/style.css">
     <title>Horiseon - Search Engine Optimization Services</title>
 </head>
 
@@ -36,7 +36,7 @@
     <section class="content">
         
         <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="an image that depicts productivity: a desk with a laptop, a magnifying glass, a cup of coffee, a not book with notes, and pencils on the desk and a pencil case." class="float-left"/>
+            <img src="challenge/starter/assets/images/search-engine-optimization.jpg" alt="an image that depicts productivity: a desk with a laptop, a magnifying glass, a cup of coffee, a not book with notes, and pencils on the desk and a pencil case." class="float-left"/>
             <h1>Search Engine Optimization</h1>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -44,7 +44,7 @@
         </article>
 
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="an individual working on a desk, holding their phone on the left hand, working on a laptop using their right hand; the laptop depicts the word reputation as a title for a few charts. There is a coffee mug on the desk." class="float-right" />
+            <img src="challenge/starter/assets/images/online-reputation-management.jpg" alt="an individual working on a desk, holding their phone on the left hand, working on a laptop using their right hand; the laptop depicts the word reputation as a title for a few charts. There is a coffee mug on the desk." class="float-right" />
             <h1>Online Reputation Management</h1>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -52,7 +52,7 @@
         </article>
 
         <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="a group of people on a meeting table, working together on topics related to social media and the internet." class="float-left" />
+            <img src="challenge/starter/assets/images/social-media-marketing.jpg" alt="a group of people on a meeting table, working together on topics related to social media and the internet." class="float-left" />
             <h1>Social Media Marketing</h1>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -65,7 +65,7 @@
 
         <section class="benefits">
             <h1>Lead Generation</h1>
-            <img src="./assets/images/lead-generation.png" alt="a symbol of a gear going through a funnel and coming out the other end as a dollar sign" />
+            <img src="challenge/starter/assets/images/lead-generation.png" alt="a symbol of a gear going through a funnel and coming out the other end as a dollar sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -73,7 +73,7 @@
 
         <section class="benefits">
             <h1>Brand Awareness</h1>
-            <img src="./assets/images/brand-awareness.png" alt="a symbol of a parson with a tie with a lightbulb radiating light as a head." />
+            <img src="challenge/starter/assets/images/brand-awareness.png" alt="a symbol of a parson with a tie with a lightbulb radiating light as a head." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -81,7 +81,7 @@
 
         <section class="benefits">
             <h1>Cost Management</h1>
-            <img src="./assets/images/cost-management.png" alt="a symbol of a gear in the background with three dollar signs in circles in front of it."></img>
+            <img src="challenge/starter/assets/images/cost-management.png" alt="a symbol of a gear in the background with three dollar signs in circles in front of it."></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
